App template applied

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 
 Todo:
   ✔ Initial description of the project @started(24-04-18 09:34) @done(24-04-18 10:04) @lasted(30m36s)
-  ☐ Check out previous projects and see what can be used from them (config, encryption, logging) @started(24-04-18 10:07)
+  ✔ Check out previous projects and see what can be used from them (config, encryption, logging) @started(24-04-18 10:04) @done(24-04-18 12:19) @lasted(2h15m7s)
+  ☐ Create basic monitor @started(24-04-18 12:19)
